# genesis

./: .gitignore  .gitmodules  .metadata  CNAME  LICENSE  README.md  build.zig  build.zig.zon  default.nix  deps.json  deps.nix  flake.nix  flutter_bootstrap.js  flutter_service_worker.js  garnix.yaml  index.html  main.dart.js  manifest.json  meson.build  meson_options.txt  pubspec.lock.json  pubspec.yaml  version.json
.github/workflows/: deploy.yml  nix.yaml
android/app/: build.gradle
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
assets/assets/google_fonts/: OFL.txt
builddir/: genesis-shell-vala.vapi  genesis-shell.h
core/: meson.build
core/data/: com.expidus.genesis.gschema.xml  meson.build
core/docs/: meson.build
core/lib/: build.vala.in  context.vala  math.vala  monitor.vala  plugin.vala  ui.vala  window-manager.vala  window.vala  workspace.vala
core/lib/dbus/: context.vala  monitor.vala  window.vala  workspace.vala
core/lib/provider/: monitor.vala  ui.vala  window.vala  workspace.vala
data/: genesis-greeter.desktop.in  genesis-shell-helper.sh.in  genesis-shell.xml  genesis.portal  manifest.yaml  meson.build  org.freedesktop.impl.portal.desktop.genesis.service.in
data/components/: genesis-desktop.ini.in  genesis-lock.ini.in  genesis-notifications.ini.in  genesis-panel.ini.in
data/dbus/: com.expidus.GenesisDesktop.service.in  com.expidus.GenesisLock.service.in  com.expidus.GenesisNotifications.service.in  com.expidus.GenesisPanel.service.in
data/modules/: expidus-desktop.plugin.in  expidus-mobile.plugin.in
data/schemas/settings/: com.expidus.genesis.desktop.gschema.xml  com.expidus.genesis.shell.gschema.xml
data/ui/80-mobile/: desktop.glade
data/ui/99-desktop/: desktop.glade  panel.glade
data/ui/desktop/: desktop.glade
data/ui/mobile/: desktop.glade
data/wallpaper/: meson.build
data/wayland-sessions/: genesis.desktop.in
data/xsessions/: genesis.desktop.in
docs/: meson.build
lib/: main.dart  views.dart  widgets.dart
lib/logic/: account.dart  applications.dart  display.dart  io_none.dart  misc.dart  network.dart  outputs.dart  power.dart  route_args.dart  sensors.dart  system.dart  theme.dart  wallpaper.dart  wm.dart
lib/views/: desktop.dart  lock.dart  login.dart
lib/views/system/: lock.dart  setup.dart
lib/widgets/: account_profile.dart  activity_drawer.dart  clock.dart  draggable.dart  keypad.dart  login.dart  output_layout.dart  panel.dart  power.dart  rounded_button.dart  surface.dart  system_bar.dart  system_drawer.dart  system_layout.dart  system_navbar.dart  toplevel.dart  user_drawer.dart  wm.dart
libtokyo/data/themes/: moon.json  night.json  storm.json
linux/: CMakeLists.txt  application-priv.h  application.cc  application.h  build.zig  icons.c  icons.h  main.cc  messaging.c  messaging.h  my_application.cc
linux/channels/: account.cc  account.h  applications.cc  applications.h  auth.cc  auth.h  display.c  display.h  outputs.cc  outputs.h  session.cc  session.h  system.cc  system.h
linux/channels/display/: backend.c  backend.h  pixel-format.c  pixel-format.h  surface.c  surface.h  texture.c  texture.h  toplevel.c
linux/data/: pam
linux/data/dbus/: com.expidusos.shell.conf
linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
linux/src/: flutter.zig  main.zig
linux/src/flutter/: Engine.zig
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
nix/: module.nix
plugins/: meson.build
plugins/gtk3/: meson.build
plugins/gtk3/src/: build.vala.in  gtk3.plugin.in  main.vala  monitor.vala  plugin.vala
plugins/gtk3/src/indicators/: wifi.vala
plugins/gtk3/src/panel-applets/: apps.vala  clock.vala  keyboard.vala  networks.vala  power.vala  sound.vala
plugins/gtk3/src/provider/: monitor.vala  ui.vala
plugins/gtk3/src/widgets/: apps.vala  button.vala  dash.vala  desktop.vala  icon.vala  lock.vala  panel.vala
plugins/gtk3/src/windows/: apps.vala  dash.vala  desktop.vala  lock.vala  panel.vala
plugins/gtk3/tests/: main.vala  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  en.po  en_US.po  genesis-shell.pot  ja.po  meson.build  pt-br.po
shell/: meson.build
shell/src/: build.vala.in  main.vala
src/: GenesisShell.zig  build.h.in  build.vala.in  logger.zig  main.zig
src/GenesisShell/: Mode.zig
src/applications/about/: application.vala  window.vala
src/components/desktop/: desktop.vala  window.vala
src/components/notifications/: daemon.vala  notification.vala  notifications.vala
src/components/panel/: panel.vala  utils.vala  window.vala
src/flutter/: Engine.zig
src/flutter/Engine/: Aot.zig  Manager.zig  Renderer.zig
src/gl/: egl.zig  gl3v3.zig
src/greeter/: greeter.vala
src/lib/bluetooth/: iface.vala  manager.vala
src/lib/common/: layout.vala  module.vala  monitor.vala  shell.vala  window.vala
src/libcomponent/: component.vala
src/libshell/: component.vala  error.vala  misd.vala  shell.vala
src/libwidgets/: app-grid.vala  app-launcher.vala  clock.vala  global-menu.vala  misc.vala  tray.vala  user.vala  wallpaper.vala
src/misd/: 80-mobile.lua  99-desktop.lua
src/portal/: main.vala  settings.vala
src/shell/: backend.vala  desktop.vala  panel.vala  polkit.vala  shell.vala  wm.vala
subprojects/: gxml.wrap  libdevident.wrap  libtokyo.wrap  vadi.wrap
test/: widget_test.dart
vapi/: Cui-0.metadata  Gvc-1.0.metadata  Playerctl-2.0.metadata  UPowerGlib-1.0.metadata  accountsservice.vapi  gdk-wayland-3.0.vapi  generate-mutter-vapi.sh  gtk+-wayland-3.0.deps  gtk+-x11-3.0.deps  gtk-layer-shell-0.vapi  libcallaudio-0.1.gir  libcallaudio-0.1.vapi  libmutter-8.deps  libmutter-8.vapi  mutter-cogl-8.vapi  playerctl.vapi  polkit-agent-1.vapi  polkit-gobject-1.vapi  upower-glib.vapi
vapi/metadata/: GdkWayland-3.0.metadata
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+107 files in other folders)
